--- a/csplugins/trunk/ucsf/scooter/chemViz/resources/plugin.props
+++ b/csplugins/trunk/ucsf/scooter/chemViz/resources/plugin.props
@@ -6,11 +6,11 @@
 # -- The following properties are REQUIRED -- #
 
 # The plugin name that will be displayed to users
-pluginName=chemViz
+pluginName=ChemViz
 
 # Description used to give users information about the plugin such as what it does.  
 # Html tags are encouraged for formatting purposes.
-pluginDescription=This plugin provides a variety of cheminformatics descriptors and visualizations
+pluginDescription=This plugin provides cheminformatics tools to cytoscape
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
 pluginVersion=1.1
@@ -31,4 +31,4 @@ projectURL=http://www.rbvi.ucsf.edu/cytoscape/chemViz/index.html
 pluginAuthorsIntsitutions=John "Scooter" Morris:UCSF;Dazhi Jiao:Indiana University School of Informatics
 
 # Date this plugin/plugin version was released
-releaseDate=January 22, 2010
+releaseDate=February 4th, 2010
