--- a/core3/vizmap-impl/trunk/pom.xml
+++ b/core3/vizmap-impl/trunk/pom.xml
@@ -141,7 +141,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Testing -->
@@ -166,7 +166,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
