--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha3</version>
   </parent>
 
   <properties>
@@ -20,6 +20,12 @@
   <name>${bundle.symbolicName}</name>
 
   <packaging>bundle</packaging>
+
+  <scm>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/plugin-impl/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/plugin-impl/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/plugin-impl/trunk</url>
+  </scm>
 
   <build>
     <resources>
@@ -108,54 +114,54 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>plugin-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>core-task-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
 
     <!-- dependencies needed for CyPluginAdapter -->	
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>event-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>model-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>work-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>viewmodel-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2</version>
     </dependency>
     <dependency>
         <groupId>org.cytoscape</groupId>
         <artifactId>vizmap-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
         <groupId>org.cytoscape</groupId>
         <artifactId>session-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
         <groupId>org.cytoscape</groupId>
         <artifactId>presentation-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>3.0.0-alpha1</version>
     </dependency>
     <dependency>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>plugin-api</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha1</version>
 		<type>test-jar</type>
 		<scope>test</scope>
 	</dependency>
