--- a/core3/session-impl/trunk/pom.xml
+++ b/core3/session-impl/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha3</version>
 	</parent>
 
 	<properties>
@@ -22,6 +22,12 @@
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
+
+	<scm>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/session-impl/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/session-impl/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/session-impl/trunk</url>
+	</scm>
 
 	<build>
 		<resources>
@@ -107,32 +113,32 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>viewmodel-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>presentation-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>session-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>session-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
