git-svn-id: http://chianti.ucsd.edu/svn@22658 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -43,8 +43,8 @@ edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowColor=0,0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=150.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeToolTip=
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=Complex Overview Style-EdgeWidthMapping
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeOpacityCalculator=Complex Overview Style-EdgeOpacityMapping
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=PanGIA Overview Style-EdgeWidthMapping
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeOpacityCalculator=PanGIA Overview Style-EdgeOpacityMapping
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.nodeSizeLocked=true
 edgeAppearanceCalculator.default.defaultEdgeColor=0,0,255
 edgeAppearanceCalculator.default.defaultEdgeFont=Default,plain,10
@@ -431,10 +431,10 @@ nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShowNestedNetwork=tr
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSize=65.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeToolTip=
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeWidth=70.0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeFontSizeCalculator=Complex Overview Style-Node Font Size-Continuous Mapper
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeLabelCalculator=Complex Overview Style-Node Label-Passthrough Mapper
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeFontSizeCalculator=PanGIA Overview Style-NodeFontSizeMapping
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeLabelCalculator=PanGIA Overview Style-Node Label-Passthrough Mapper
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeSizeLocked=true
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeUniformSizeCalculator=Complex Overview Style-Node Size-Continuous Mapper
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeUniformSizeCalculator=PanGIA Overview Style-NodeSizeMapping
 nodeAppearanceCalculator.default.defaultNodeBorderColor=102,102,102
 nodeAppearanceCalculator.default.defaultNodeBorderOpacity=255.0
 nodeAppearanceCalculator.default.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
