--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -3,7 +3,7 @@
 # Any changes may make these visual mappings unreadable.
 # Please make sure you know what you are doing before modifying this file by hand.
 #
-#Fri Oct 29 15:06:03 PDT 2010
+#Fri Oct 29 16:37:50 PDT 2010
 edgeAppearanceCalculator.Minimal.defaultEdgeColor=51,51,51
 edgeAppearanceCalculator.Minimal.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Minimal.defaultEdgeFontSize=10.0
@@ -59,29 +59,30 @@ edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeTargetArrowColor=0,0,0
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeTargetArrowOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Module\ Style.defaultEdgeToolTip=
-edgeAppearanceCalculator.PanGIA\ Module\ Style.edgeColorCalculator=Module Style-Edge Color-Discrete Mapper
+edgeAppearanceCalculator.PanGIA\ Module\ Style.edgeColorCalculator=PanGIA Module Style-Edge Color-Discrete Mapper
 edgeAppearanceCalculator.PanGIA\ Module\ Style.edgeLineStyleCalculator=Module Style-Edge Line Style-Discrete Mapper
+edgeAppearanceCalculator.PanGIA\ Module\ Style.edgeOpacityCalculator=PanGIA Module Style-Edge Opacity-Discrete Mapper
 edgeAppearanceCalculator.PanGIA\ Module\ Style.nodeSizeLocked=false
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeColor=0,0,0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFontSize=10.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabel=
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelPosition=C,C,c,0.00,0.00
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineStyle=SOLID
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineWidth=1.0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=255
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=255.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeToolTip=
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=PanGIA Overview Style-Edge Line Width-Continuous Mapper
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeOpacityCalculator=PanGIA Overview Style-Edge Opacity-Continuous Mapper
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=PanGIA Overview Style-EdgeWidthMapping
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeOpacityCalculator=PanGIA Overview Style-EdgeOpacityMapping
 edgeAppearanceCalculator.Sample1.defaultEdgeColor=0,0,0
 edgeAppearanceCalculator.Sample1.defaultEdgeFont=Default,plain,10
 edgeAppearanceCalculator.Sample1.defaultEdgeFontSize=10.0
@@ -186,6 +187,10 @@ edgeColorCalculator.BasicDiscrete.mapping.map.pr=255,0,255
 edgeColorCalculator.BasicDiscrete.mapping.map.rc=150,150,0
 edgeColorCalculator.BasicDiscrete.mapping.type=DiscreteMapping
 edgeColorCalculator.BasicDiscrete.visualPropertyType=EDGE_COLOR
+edgeColorCalculator.Edge\ Color-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
+edgeColorCalculator.Edge\ Color-Discrete\ Mapper.mapping.controllerType=4
+edgeColorCalculator.Edge\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
+edgeColorCalculator.Edge\ Color-Discrete\ Mapper.visualPropertyType=EDGE_COLOR
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controllerType=4
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic=0,0,255
@@ -193,6 +198,13 @@ edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physi
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=0,0,0
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 edgeColorCalculator.Module\ Style-Edge\ Color-Discrete\ Mapper.visualPropertyType=EDGE_COLOR
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.controllerType=4
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Genetic=0,204,204
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical&Genetic=204,0,51
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.map.Physical=0,0,0
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
+edgeColorCalculator.PanGIA\ Module\ Style-Edge\ Color-Discrete\ Mapper.visualPropertyType=EDGE_COLOR
 edgeFontFaceCalculator.BasicContinuous.mapping.boundaryvalues=2
 edgeFontFaceCalculator.BasicContinuous.mapping.bv0.domainvalue=0.0010
 edgeFontFaceCalculator.BasicContinuous.mapping.bv0.equal=Default,bold,12
@@ -336,6 +348,13 @@ edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.controller=edge s
 edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
 edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.type=ContinuousMapping
 edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.visualPropertyType=EDGE_OPACITY
+edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mapping.controller=PanGIA.Interaction Type
+edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mapping.controllerType=4
+edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mapping.map.Genetic=150.0
+edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mapping.map.Physical&Genetic=200.0
+edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mapping.map.Physical=255.0
+edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mapping.type=DiscreteMapping
+edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.visualPropertyType=EDGE_OPACITY
 edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.boundaryvalues=2
 edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.domainvalue=2.3885300159454346
 edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.equal=50.0
@@ -549,7 +568,7 @@ nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeCustomGraphicsPosition
 nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeCustomGraphicsPosition7=C,C,c,0.00,0.00
 nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeCustomGraphicsPosition8=C,C,c,0.00,0.00
 nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeCustomGraphicsPosition9=C,C,c,0.00,0.00
-nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeFillColor=204,255,255
+nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeFillColor=240,240,240
 nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeFont=Arial-BoldMT,plain,12
 nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeFontSize=28.0
 nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeHight=50.0
@@ -569,7 +588,7 @@ nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeWidth=160.0
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeLabelCalculator=Module Style-Node Label-Passthrough Mapper
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeSizeLocked=false
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderColor=0,0,0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderOpacity=255
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderOpacity=255.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics2=cytoscape.visual.customgraphic.NullCustomGraphics
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics3=cytoscape.visual.customgraphic.NullCustomGraphics
@@ -594,21 +613,21 @@ nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeFontSize=12.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeHight=30.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabel=
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelColor=0,0,0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=255
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=255.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelPosition=S,N,c,0.00,0.00
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineStyle=SOLID
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineWidth=1.0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeOpacity=255
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeOpacity=255.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShape=roundrect
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShowNestedNetwork=true
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSize=35.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeToolTip=
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeWidth=70.0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeFontSizeCalculator=PanGIA Overview Style-Node Font Size-Continuous Mapper
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeFontSizeCalculator=PanGIA Overview Style-NodeFontSizeMapping
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeLabelCalculator=PanGIA Overview Style-Node Label-Passthrough Mapper
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeLabelOpacityCalculator=PanGIA Overview Style-Node Label Opacity-Continuous Mapper
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeUniformSizeCalculator=PanGIA Overview Style-Node Size-Continuous Mapper
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeUniformSizeCalculator=PanGIA Overview Style-NodeSizeMapping
 nodeAppearanceCalculator.Sample1.defaultNodeBorderColor=0,0,0
 nodeAppearanceCalculator.Sample1.defaultNodeBorderOpacity=255.0
 nodeAppearanceCalculator.Sample1.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
