--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -68,6 +68,13 @@
 					<footer>Cytoscape 3 Core API</footer>
 					<header>Cytoscape 3 Core API</header>
 					<bottom>Copyright 2010 Cytoscape Consortium. All rights reserved.</bottom>
+					<tagletArtifacts>
+						<tagletArtifact>
+							<groupId>org.cytoscape</groupId>
+							<artifactId>taglets</artifactId>
+							<version>1.0-SNAPSHOT</version>
+						</tagletArtifact>
+					</tagletArtifacts>
 				</configuration>
 				<executions>
 					<execution>
@@ -291,6 +298,13 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<configuration>
 					<excludePackageNames>*.impl</excludePackageNames>
+					<tagletArtifacts>
+						<tagletArtifact>
+							<groupId>org.cytoscape</groupId>
+							<artifactId>taglets</artifactId>
+							<version>1.0-SNAPSHOT</version>
+						</tagletArtifact>
+					</tagletArtifacts>
 				</configuration>
 				<reportSets>
 					<reportSet>
