Some bug fixes based on work preparing chemViz poster
git-svn-id: http://chianti.ucsd.edu/svn@22672 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsf/scooter/chemViz/build.xml
+++ b/csplugins/trunk/ucsf/scooter/chemViz/build.xml
@@ -28,6 +28,9 @@
   <path id="compile.classpath">
     <pathelement path="${build.dir}/classes" />
     <fileset dir="${cytoscape.dir}">
+      <include name="*.jar" />
+    </fileset>
+    <fileset dir="${cytoscape.dir}">
       <include name="cytoscape.jar" />
     </fileset>
     <fileset dir="${lib.dir}">
