git-svn-id: http://chianti.ucsd.edu/svn@22683 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
+++ b/csplugins/trunk/ucsd/ruschein/PanGIA/resources/PanGIAVS.props
@@ -3,7 +3,7 @@
 # Any changes may make these visual mappings unreadable.
 # Please make sure you know what you are doing before modifying this file by hand.
 #
-#Fri Oct 29 16:37:50 PDT 2010
+#Tue Nov 02 12:10:02 PDT 2010
 edgeAppearanceCalculator.Minimal.defaultEdgeColor=51,51,51
 edgeAppearanceCalculator.Minimal.defaultEdgeFont=SanSerif,plain,10
 edgeAppearanceCalculator.Minimal.defaultEdgeFontSize=10.0
@@ -68,21 +68,21 @@ edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFont=SanSerif,plain,
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeFontSize=10.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabel=
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=255.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelOpacity=255
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelPosition=C,C,c,0.00,0.00
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLabelWidth=100.0
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineStyle=SOLID
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeLineWidth=1.0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=255.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeOpacity=255
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=255.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowOpacity=255
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeSourceArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowColor=0,0,0
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=255.0
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowOpacity=255
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeTargetArrowShape=NONE
 edgeAppearanceCalculator.PanGIA\ Overview\ Style.defaultEdgeToolTip=
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=PanGIA Overview Style-EdgeWidthMapping
-edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeOpacityCalculator=PanGIA Overview Style-EdgeOpacityMapping
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeLineWidthCalculator=PanGIA Overview Style-Edge Line Width-Continuous Mapper
+edgeAppearanceCalculator.PanGIA\ Overview\ Style.edgeOpacityCalculator=PanGIA Overview Style-Edge Opacity-Continuous Mapper
 edgeAppearanceCalculator.Sample1.defaultEdgeColor=0,0,0
 edgeAppearanceCalculator.Sample1.defaultEdgeFont=Default,plain,10
 edgeAppearanceCalculator.Sample1.defaultEdgeFontSize=10.0
@@ -331,20 +331,20 @@ edgeLineWidthCalculator.InteractionType.mapping.controllerType=4
 edgeLineWidthCalculator.InteractionType.mapping.type=DiscreteMapping
 edgeLineWidthCalculator.InteractionType.visualPropertyType=EDGE_LINE_WIDTH
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.boundaryvalues=2
-edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv0.domainvalue=2.3885300159454346
-edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv0.equal=5.0
-edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv0.greater=5.0
+edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv0.domainvalue=2.052506685256958
+edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv0.equal=5.5882354
+edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv0.greater=5.5882354
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv0.lesser=1.0
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv1.domainvalue=402.8308410644531
-edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv1.equal=40.0
+edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv1.equal=40.892933
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv1.greater=1.0
-edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv1.lesser=40.0
+edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.bv1.lesser=40.892933
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.controller=PanGIA.edge score
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.mapping.type=ContinuousMapping
 edgeLineWidthCalculator.PanGIA\ Overview\ Style-Edge\ Line\ Width-Continuous\ Mapper.visualPropertyType=EDGE_LINE_WIDTH
 edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.boundaryvalues=0
-edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.controller=edge score
+edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.controller=PanGIA.edge score
 edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
 edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.mapping.type=ContinuousMapping
 edgeOpacityCalculator.Edge\ Opacity-Continuous\ Mapper.visualPropertyType=EDGE_OPACITY
@@ -356,9 +356,9 @@ edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mappi
 edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.mapping.type=DiscreteMapping
 edgeOpacityCalculator.PanGIA\ Module\ Style-Edge\ Opacity-Discrete\ Mapper.visualPropertyType=EDGE_OPACITY
 edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.boundaryvalues=2
-edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.domainvalue=2.3885300159454346
-edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.equal=50.0
-edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.greater=50.0
+edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.domainvalue=2.052506685256958
+edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.equal=50.43287
+edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.greater=50.43287
 edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv0.lesser=1.0
 edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv1.domainvalue=402.8308410644531
 edgeOpacityCalculator.PanGIA\ Overview\ Style-Edge\ Opacity-Continuous\ Mapper.mapping.bv1.equal=220.0
@@ -588,7 +588,7 @@ nodeAppearanceCalculator.PanGIA\ Module\ Style.defaultNodeWidth=160.0
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeLabelCalculator=Module Style-Node Label-Passthrough Mapper
 nodeAppearanceCalculator.PanGIA\ Module\ Style.nodeSizeLocked=false
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderColor=0,0,0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderOpacity=255.0
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeBorderOpacity=255
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics2=cytoscape.visual.customgraphic.NullCustomGraphics
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeCustomGraphics3=cytoscape.visual.customgraphic.NullCustomGraphics
@@ -613,21 +613,20 @@ nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeFontSize=12.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeHight=30.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabel=
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelColor=0,0,0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=255.0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelPosition=S,N,c,0.00,0.00
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelOpacity=255
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelPosition=C,C,c,0.00,0.00
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLabelWidth=100.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineStyle=SOLID
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeLineWidth=1.0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeOpacity=255.0
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeOpacity=255
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShape=roundrect
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeShowNestedNetwork=true
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeSize=35.0
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeToolTip=
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.defaultNodeWidth=70.0
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeFontSizeCalculator=PanGIA Overview Style-NodeFontSizeMapping
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeFontSizeCalculator=PanGIA Overview Style-Node Font Size-Continuous Mapper
 nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeLabelCalculator=PanGIA Overview Style-Node Label-Passthrough Mapper
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeLabelOpacityCalculator=PanGIA Overview Style-Node Label Opacity-Continuous Mapper
-nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeUniformSizeCalculator=PanGIA Overview Style-NodeSizeMapping
+nodeAppearanceCalculator.PanGIA\ Overview\ Style.nodeUniformSizeCalculator=PanGIA Overview Style-Node Size-Continuous Mapper
 nodeAppearanceCalculator.Sample1.defaultNodeBorderColor=0,0,0
 nodeAppearanceCalculator.Sample1.defaultNodeBorderOpacity=255.0
 nodeAppearanceCalculator.Sample1.defaultNodeCustomGraphics1=cytoscape.visual.customgraphic.NullCustomGraphics
@@ -883,8 +882,8 @@ nodeFontSizeCalculator.Node\ Font\ Size-Continuous\ Mapper.mapping.type=Continuo
 nodeFontSizeCalculator.Node\ Font\ Size-Continuous\ Mapper.visualPropertyType=NODE_FONT_SIZE
 nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.boundaryvalues=2
 nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.domainvalue=1.4142135623730951
-nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.equal=8.0
-nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.greater=8.0
+nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.equal=10.0
+nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.greater=10.0
 nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv0.lesser=1.0
 nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.domainvalue=21.02379604162864
 nodeFontSizeCalculator.PanGIA\ Overview\ Style-Node\ Font\ Size-Continuous\ Mapper.mapping.bv1.equal=30.0
@@ -961,19 +960,6 @@ nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mappin
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.map.yes=0,102,204
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.mapping.type=DiscreteMapping
 nodeLabelColor.Nested\ Network\ Style-Node\ Label\ Color-Discrete\ Mapper.visualPropertyType=NODE_LABEL_COLOR
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.boundaryvalues=2
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv0.domainvalue=1.4142135623730951
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv0.equal=150.0
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv0.greater=150.0
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv0.lesser=1.0
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv1.domainvalue=21.02379604162864
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv1.equal=220.0
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv1.greater=1.0
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.bv1.lesser=220.0
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.controller=PanGIA.SQRT of module size
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.mapping.type=ContinuousMapping
-nodeLabelOpacityCalculator.PanGIA\ Overview\ Style-Node\ Label\ Opacity-Continuous\ Mapper.visualPropertyType=NODE_LABEL_OPACITY
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controller=has_nested_network
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.controllerType=4
 nodeLabelPositionCalculator.Nested\ Network\ Style-Node\ Label\ Position-Discrete\ Mapper.mapping.map.yes=SE,NW,c,0.00,0.00
@@ -1132,13 +1118,13 @@ nodeUniformSizeCalculator.Node\ Size-Continuous\ Mapper.mapping.type=ContinuousM
 nodeUniformSizeCalculator.Node\ Size-Continuous\ Mapper.visualPropertyType=NODE_SIZE
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.boundaryvalues=2
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.domainvalue=1.4142135623730951
-nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.equal=20.0
-nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.greater=20.0
+nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.equal=30.0
+nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.greater=30.0
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv0.lesser=1.0
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.domainvalue=21.02379604162864
-nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.equal=166.76735
+nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.equal=175.0
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.greater=1.0
-nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.lesser=166.76735
+nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.bv1.lesser=175.0
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.controller=PanGIA.SQRT of module size
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.interpolator=LinearNumberToNumberInterpolator
 nodeUniformSizeCalculator.PanGIA\ Overview\ Style-Node\ Size-Continuous\ Mapper.mapping.type=ContinuousMapping
