--- a/core3/archetypes/task-plugin/trunk/pom.xml
+++ b/core3/archetypes/task-plugin/trunk/pom.xml
@@ -6,4 +6,16 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - Cytoscape Task Plugin</name>
   <url>http://maven.apache.org</url>
+  <distributionManagement>
+    <repository>
+      <id>releases</id>
+      <name>Internal Releases</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>Internal Snapshots</name>
+      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
