--- a/cytoscape/trunk/archetypes/sample-plugin/pom.xml
+++ b/cytoscape/trunk/archetypes/sample-plugin/pom.xml
@@ -27,6 +27,45 @@
         <version>2.0-alpha-5</version>
         <extensions>true</extensions>
       </plugin>
+	  <!-- 
+	       The point of this code is to use the archetype we just
+	       created and use it to generate a project and then build
+	       the project, which will test that our archetype still
+	       works.
+	  -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-invoker-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>install</goal>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <cloneProjectsTo>${project.build.directory}/it/projects</cloneProjectsTo>
+          <goals>
+            <goal>org.apache.maven.plugins:maven-archetype-plugin:generate</goal>
+          </goals>
+          <localRepositoryPath>${project.build.directory}/it/repo</localRepositoryPath>
+          <pomIncludes>
+            <pomInclude>*</pomInclude>
+          </pomIncludes>
+          <projectsDirectory>${basedir}/src/it/projects</projectsDirectory>
+          <properties>
+            <archetypeArtifactId>${project.artifactId}</archetypeArtifactId>
+            <archetypeGroupId>${project.groupId}</archetypeGroupId>
+            <archetypeRepository>local</archetypeRepository>
+            <archetypeVersion>${project.version}</archetypeVersion>
+            <goals>verify</goals>
+            <interactiveMode>false</interactiveMode>
+          </properties>
+          <streamLogs>true</streamLogs>
+        </configuration>
+      </plugin> 
     </plugins>
   </build>
 </project>
