other implementations have been provided for sbml and psi-mi
git-svn-id: http://chianti.ucsd.edu/svn@22705 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape3/trunk/pom.xml
+++ b/cytoscape3/trunk/pom.xml
@@ -332,11 +332,11 @@
 			<module>webservice</module> <module>vizmap-gui</module>
 			<module>cpath</module>
 			<module>merge</module> <module>math.xform</module>
-			<module>psi.mi</module> <module>biopax</module>
+			<module>biopax</module>
 			<module>editor</module> 
 			<module>attribute.browser</module> <module>cpath2</module>
 			<module>filters.old</module> <module>filters</module>
-			<module>sbml.reader</module> <module>manual.layout</module>
+			<module>manual.layout</module>
 			
 			<module>ontology</module>
 		-->
