fixed a typo in htaccess
git-svn-id: http://chianti.ucsd.edu/svn@22716 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/new_cytoscape_website/trunk/.htaccess
+++ b/new_cytoscape_website/trunk/.htaccess
@@ -6,4 +6,4 @@ Redirect 301 /datasets/ptacek.sif http://chianti.ucsd.edu/cytoscape-data/ptacek.
 Redirect 301 /datasets/stelzl.sif http://chianti.ucsd.edu/cytoscape-data/stelzl.sif
 Redirect 301 /datasets/rual.sif http://chianti.ucsd.edu/cytoscape-data/rual.sif
 Redirect 301 /tut/getting.started/RUAL.subset.sif http://chianti.ucsd.edu/cytoscape-data/RUAL.subset.sif
-Redirect 301 /ISBM2002 http://prosecco.ucsd.edu/ISBM2002
+Redirect 301 /ISMB2002 http://prosecco.ucsd.edu/ISMB2002
