--- a/core3/linkout-impl/trunk/pom.xml
+++ b/core3/linkout-impl/trunk/pom.xml
@@ -55,14 +55,19 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>cytoscape</groupId>
-			<artifactId>application</artifactId>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>core-task-api</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>swing-application-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>service-util</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>3.0.0-alpha1</version>
 		</dependency>
 	</dependencies>
 
