now removing runner dir when mvn clean gets run
git-svn-id: http://chianti.ucsd.edu/svn@22737 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape3/trunk/pom.xml
+++ b/cytoscape3/trunk/pom.xml
@@ -247,6 +247,17 @@
 					</compilerArguments>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.4.1</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>${basedir}/runner</directory>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
