--- a/core3/swing-application-api/trunk/pom.xml
+++ b/core3/swing-application-api/trunk/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>session-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
