--- a/core3/vizmap-gui-impl/trunk/pom.xml
+++ b/core3/vizmap-gui-impl/trunk/pom.xml
@@ -78,29 +78,10 @@
 			<artifactId>default-mappings</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>presentation-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>work-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>session-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>model-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>cytoscape</groupId>
-			<artifactId>application</artifactId>
+			<artifactId>swing-application-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
