Dependencies are minimized to avoid versioning problems.
git-svn-id: http://chianti.ucsd.edu/svn@22742 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/log-swing/trunk/pom.xml
+++ b/core3/log-swing/trunk/pom.xml
@@ -122,5 +122,13 @@
 			<version>1.5.2</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<!-- for testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
