--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -159,6 +159,17 @@
         <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-core</artifactId>
+      <version>3.0.2</version>
+    </dependency>    
+    <dependency>
+      <groupId>jdom</groupId>
+      <artifactId>jdom</artifactId>
+      <version>1.1</version>
+    </dependency>
+
+    <dependency>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>plugin-api</artifactId>
 		<version>3.0.0-alpha1</version>
