Spring dependency added.  This is necessary to enable IDE error checking.
git-svn-id: http://chianti.ucsd.edu/svn@22745 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/vizmap-gui-impl/trunk/pom.xml
+++ b/core3/vizmap-gui-impl/trunk/pom.xml
@@ -108,10 +108,12 @@
 			<version>0.9.7</version>
 			<type>bundle</type>
 		</dependency>
+		
+		<!-- This is necessary to validate Spring XML. -->
 		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-api</artifactId>
-			<version>1.5.2</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
