--- a/core3/linkout-impl/trunk/pom.xml
+++ b/core3/linkout-impl/trunk/pom.xml
@@ -69,6 +69,14 @@
 			<artifactId>service-util</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
+
+		<!-- This is necessary to validate Spring XML. -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
